# OneEuroTrip

./: .gitignore  COMMIT_MESSAGE.md  IMPLEMENTATION_SUMMARY.md  MONUMENT_RECOGNITION.md  QUICKSTART.md  README.md  START_HERE.md  VISUAL_GUIDE.md  run.bat  run.sh
backend/: .gitignore  (+4 more)
frontend/: Cargo.toml  README.md  index.html  package-lock.json  package.json
frontend/.next/: app-build-manifest.json  build-manifest.json  prerender-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/static/chunks/: 57ccb_7915d89b._.js  57ccb_7915d89b._.js.map  57ccb_@swc_helpers_cjs_a448f5b4._.js  57ccb_@swc_helpers_cjs_a448f5b4._.js.map  57ccb_a60e4f8a._.js  57ccb_a60e4f8a._.js.map  57ccb_next_dist_74525fe7._.js  57ccb_next_dist_74525fe7._.js.map  57ccb_next_dist_client_b2000ecb._.js  57ccb_next_dist_client_b2000ecb._.js.map  (+21 more)
frontend/.next/types/: routes.d.ts  validator.ts
frontend/src/: App.tsx  index.css  main.rs
frontend/src/components/: AnalysisLoading.tsx  CameraDialog.tsx  CustomButton.tsx  FlightResults.tsx  Footer.tsx  Header.tsx  ImagePreview.tsx  OriginSelector.tsx  UploadArea.tsx  WelcomeMessage.tsx  index.tsx
frontend/src/hooks/: useImageUpload.ts
frontend/src/services/: flightApi.ts  historyApi.ts  userApi.ts
frontend/src/theme/: index.ts
frontend/src/types/: index.ts
frontend/src/utils/: camera.ts
(+83 files in other folders)
