[package]
name = "monument-recognition-tui"
version = "0.1.0"
edition = "2021"
description = "Local AI Monument Recognition - Terminal UI"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["multipart", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
color-eyre = "0.6"
